# data-structures

./: Bintree  Bintree.c  Brackets.c  CMakeLists.txt  Hash  Hash.c  Heapsort.c  Heaptree  Heaptree.c  Linkedlist.c  Phonebook.c  Queue.c  Remove2.c  Stack.c  Tickets  Tickets.c  prac  prac.c  test.c  treeSum  treeSum.c
