cmake_minimum_required(VERSION 3.22.1)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

project(MyProject VERSION 1.0 LANGUAGES C)

add_executable(Linkedlist Linkedlist.c)
add_executable(Remove2 Remove2.c)
add_executable(Stack Stack.c)
add_executable(Brackets Brackets.c)
add_executable(Queue Queue.c)
add_executable(Tickets Tickets.c)
add_executable(Bintree Bintree.c)
add_executable(treeSum treeSum.c)
add_executable(Heaptree Heaptree.c)
add_executable(Heapsort Heapsort.c)
add_executable(Hash Hash.c)
add_executable(Phonebook Phonebook.c)